removed loggers
Revert "removed loggers"

This reverts commit 3ee1117ee545949d3004974889be0555bff0242a.

Revert "Merge branch 'master' into SNI-6559"

This reverts commit 7048a629f3e1ac33ba978abe20423444e40d9e80, reversing
changes made to b00866602b20019dc49bff693d81e228a4601dcf.

Revert "Update values.preview.template.yaml"

This reverts commit b00866602b20019dc49bff693d81e228a4601dcf.